--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tech_degree_project_8",
   "version": "1.0.0",
   "description": "SQL Library Manager",
-  "main": "app.js",
+  "main": "./bin/www",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www"
