--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   },
   "homepage": "https://github.com/samuel-2018/tech_degree_project_8#readme",
   "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
     "pug": "^2.0.4",
     "sequelize": "^5.10.3",
     "sequelize-cli": "^5.5.0",
-    "sqlite3": "^4.0.9",
-    "http-errors": "~1.6.3",
-    "cookie-parser": "~1.4.4",
-    "morgan": "~1.9.1",
-    "debug": "~2.6.9"
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.0.9"
   }
 }
