--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "mysql": "^2.17.1",
     "pug": "^2.0.4",
     "sequelize": "^5.10.3",
     "sequelize-cli": "^5.5.0",
